force-app/main/default/objects/NCMT_Data_Upload__c/NCMT_Data_Upload__c.object-meta.xml
<CustomObject>
    <description>Used to upload data files that require updates of existing data by utilizing a trigger modified for each release and tested to confirm correct data manipulation.</description>
    <label>NCMT Data Upload</label>
    <nameField>
        <displayFormat>Upload-{000000}</displayFormat>
        <label>NCMT Data Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Data Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>