force-app/main/default/objects/NCMT_Data_Upload__c/fields/Number_10__c.field-meta.xml
<CustomField>
    <fullName>Number_10__c</fullName>
    <label>Number 10</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>