force-app/main/default/objects/NCMT_Data_Upload__c/fields/Number_11__c.field-meta.xml
<CustomField>
    <fullName>Number_11__c</fullName>
    <label>Number 11</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>