force-app/main/default/objects/NCMT_Data_Upload__c/fields/Text_10__c.field-meta.xml
<CustomField>
    <fullName>Text_10__c</fullName>
    <label>Text 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>