force-app/main/default/objects/NCMT_Data_Upload__c/fields/Text_11__c.field-meta.xml
<CustomField>
    <fullName>Text_11__c</fullName>
    <label>Text 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>