force-app/main/default/objects/NCMT_Data_Upload__c/fields/Text_5__c.field-meta.xml
<CustomField>
    <fullName>Text_5__c</fullName>
    <label>Text 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>